# Chem-Comp-Database

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: Molecules11.sdf
src/Chem_Database/: database.py  gui.py  image.py  img_display.py
tests/: test_smoke.py
