[project]
name = "chem-database-tool"
version = "0.1.0"
requires-python = ">=3.12"
dependencies=[]
readme = "README.md"
authors = [
    {name = "John T. Hardin", email = "johnhardin2021@gmail.com"}
]
description = "Create a database of chemical compounds from an .sdf file and visualise in a GUI"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.0",
    "ruff"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
chem-database-tool="Chem_Database.cli:app"

[tool.pytest.ini_options]
testpaths=["tests"]
addopts = ["-q"]

[tool.mypy]
python_version="3.13"
disallow_untyped_defs=true
warn_return_any=true
warn_unused_configs=true
exclude=[
    "tests/",
    "venv/",
]